# tv-mcp

./: CLAUDE.md  Cargo.toml  install.ps1  install.sh
.github/workflows/: release.yml
resources/: domain-ai-instructions.md
scripts/: release-mac.sh  release-win.ps1
src/: lib.rs  main.rs
src/core/: error.rs  mod.rs  settings.rs  supabase.rs
src/modules/: mod.rs
src/modules/apollo/: api.rs  commands.rs  mod.rs  types.rs
src/modules/blog/: articles.rs  mod.rs  types.rs
src/modules/crm/: activities.rs  companies.rs  contacts.rs  mod.rs  types.rs
src/modules/dashboards/: mod.rs
src/modules/discussions/: mod.rs
src/modules/docs/: mod.rs  pages.rs  types.rs
src/modules/email/: campaigns.rs  mod.rs  send.rs
src/modules/feed/: cards.rs  mod.rs  types.rs
src/modules/fy_review/: actions.rs  mod.rs  queries.rs
src/modules/mcp_tools/: mod.rs  sync.rs  types.rs
src/modules/notifications/: mod.rs
src/modules/qbo/: connection.rs  entities.rs  je_write.rs  mod.rs  reports.rs  sync.rs  transactions.rs
src/modules/tools/: docgen.rs  gamma.rs  intercom.rs  mod.rs  nanobanana.rs  seedance.rs
src/modules/val_admin/: mod.rs
src/modules/val_ai/: mod.rs
src/modules/val_cross_sync/: mod.rs
src/modules/val_sync/: api.rs  auth.rs  config.rs  drive.rs  errors.rs  extract.rs  metadata.rs  mod.rs  monitoring.rs  sql.rs  sync.rs
src/modules/whatsapp/: mod.rs
src/modules/work/: initiatives.rs  labels.rs  markdown.rs  milestones.rs  mod.rs  projects.rs  sessions.rs  skills.rs  tasks.rs  types.rs  users.rs
src/modules/workflows/: mod.rs
src/server/: protocol.rs  server.rs
src/server/tools/: apollo.rs  blog.rs  crm.rs  dashboards.rs  docgen.rs  (+20 more)
