[package]
name = "tv-mcp"
version = "0.10.36"
edition = "2021"
description = "MCP server for ThinkVAL — CRM, Work, Email, VAL Sync, and more"

[lib]
name = "tv_mcp"
path = "src/lib.rs"

[[bin]]
name = "tv-mcp"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Home directory
dirs = "5"

# Encoding
base64 = "0.22"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart", "stream"], default-features = false }

# Error handling
thiserror = "2"

# Async runtime
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros", "io-std", "net", "process"] }

# HTTP server (for MCP HTTP mode)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Lazy statics
once_cell = "1"

# POSIX signals (orphan detection)
libc = "0.2"

# Regex (frontmatter parsing)
regex = "1"

# Markdown to HTML (Intercom, PDF generation)
pulldown-cmark = "0.10"

# Hashing
sha2 = "0.10"

# UUIDs (dashboard widget ids, etc.)
uuid = { version = "1", features = ["v4"] }

# URL encoding
urlencoding = "2"

# CSS inlining (HTML emails)
css-inline = "0.20"

# AWS SDKs
aws-sdk-s3 = "1"
aws-sdk-ses = "1"
aws-types = "1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

[profile.dev]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 16
